# Program-LightIDE

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  project.md
docs/: market_analysis.md
scripts/: generate-icons.js  migrate-localstorage.js  setup.js
src/: claude-sidecar.mjs  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude.rs  commands.rs  editor.rs  file_system.rs  lib.rs  llm_usage.rs  main.rs  terminal.rs  terminal_commands.rs
src/components/: app.js  claude-chat.js  editor.js  file-tree.js  state.js  statusbar.js  terminal.js  tsx-compiler.js  workspace.js
src/styles/: editor.css  file-tree.css  main.css  terminal.css
