[package]
name = "lightide"
version = "0.1.0"
description = "A lightweight, fast code editor"
authors = ["Cyesuta"]
edition = "2021"
license = "MIT"

[lib]
name = "lightide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
walkdir = "2"
notify = "8"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4"
portable-pty = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
gethostname = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
